refactor(config): 移除AI配置中的硬编码参数
- 从application.yml中删除了dashscope的chat选项配置
- 简化了ThAiProcessHandler中上下文属性获取逻辑
- 更新了Java 17的集合操作方法调用
- 调整了服务类中的依赖注入顺序和移除未使用的对象映射器
- 优化了控制器中服务注入的声明顺序